Fix more basic stuff

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,19 +1,36 @@
 ---
-title: Folkingebrew
+title: Hop into the Grain! - Craft Beer & Music Festival 2018 - Groningen
 ---
 
 <section class="hero row">
 
-  <h1>
-    WE ONLY BREW BEER
-      <br>
-    WE WANT TO DRINK.
-  </h1>
+  <a class="button">Buy tickets &raquo;</a>
 
-  <h3>
-    And we like powerful, flavorful crazy shit.
-  </h3>
+</section>
 
-  <a class="button">Discover our beers</a>
+<section class="beers row">
+  <div class="col">
+    Some breweries
+  </div>
+
+  <a class="button">Beer list</a>
+
+</section>
+
+<section class="beers row">
+  <div class="col">
+    Some bands
+  </div>
+
+  <a class="button">Bands list</a>
+
+</section>
+
+<section class="tickets row">
+  <div class="col">
+    Tickets
+  </div>
+
+  EMBED
 
 </section>
