--- a/source/stylesheets/base/_variables.scss
+++ b/source/stylesheets/base/_variables.scss
@@ -17,6 +17,7 @@ $blue: #1565c0;
 $dark-gray: #333;
 $medium-gray: #999;
 $light-gray: #ddd;
+$light-blue: #99fdfb;
 
 // Font Colors
 $base-font-color: $dark-gray;
