--- a/source/stylesheets/main.css.scss
+++ b/source/stylesheets/main.css.scss
@@ -1,6 +1,9 @@
 @charset "utf-8";
 
+@import "normalize";
 @import "bourbon";
 @import "base/grid-settings";
 @import "neat";
 @import "base/base";
+
+@import "layout";
