--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,36 +1,22 @@
 ---
-title: Hop into the Grain! - Craft Beer & Music Festival 2018 - Groningen
+title: Hop into the Grain! - Craft Beer & Music Festival - MAY 26th, 2018 - Groningen
+description: Hop into the Grain! op het Craft Beer & Music Festival
 ---
 
-<section class="hero row">
-
-  <a class="button">Buy tickets &raquo;</a>
-
-</section>
-
-<section class="beers row">
-  <div class="col">
-    Some breweries
+<section class="hero">
+  <div class="hero-inner">
+    HERO
   </div>
-
-  <a class="button">Beer list</a>
-
 </section>
 
-<section class="beers row">
-  <div class="col">
-    Some bands
+<!-- <section class="countdown">
+  <div class="row">
+    Countdown
   </div>
-
-  <a class="button">Bands list</a>
-
 </section>
 
-<section class="tickets row">
-  <div class="col">
-    Tickets
+<section class="homepage-hero">
+  <div class="row">
+    Time + date
   </div>
-
-  EMBED
-
-</section>
+</section> -->
