--- a/source/stylesheets/base/_variables.scss
+++ b/source/stylesheets/base/_variables.scss
@@ -6,6 +6,9 @@ $heading-font-family: $base-font-family;
 $base-line-height: 1.5;
 $heading-line-height: 1.2;
 
+// Font Sizes
+$base-font-size: 1em;
+
 // Other Sizes
 $base-border-radius: 3px;
 $base-spacing: 1.5em;
@@ -13,15 +16,18 @@ $small-spacing: $base-spacing / 2;
 $base-z-index: 0;
 
 // Colors
+$orange: #cd4f1c;
 $blue: #1565c0;
 $dark-gray: #333;
 $medium-gray: #999;
 $light-gray: #ddd;
 $light-blue: #99fdfb;
+$white: #fff;
+$black: #000;
 
 // Font Colors
 $base-font-color: $dark-gray;
-$action-color: $blue;
+$action-color: $orange;
 
 // Border
 $base-border-color: $light-gray;
