--- a/source/stylesheets/main.css.scss
+++ b/source/stylesheets/main.css.scss
@@ -5,5 +5,7 @@
 @import "base/grid-settings";
 @import "neat";
 @import "base/base";
+@import "components/base";
 
-@import "layout";
+@import "header";
+@import "footer";
