--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -14,6 +14,7 @@
     <div class="main" role="main">
       <%= partial "header" %>
       <%= yield %>
+      <%= partial "footer" %>
     </div>
   </body>
 </html>
