Add concept art hero

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -5,18 +5,6 @@ description: Hop into the Grain! op het Craft Beer & Music Festival
 
 <section class="hero">
   <div class="hero-inner">
-    HERO
+    &nbsp;
   </div>
 </section>
-
-<!-- <section class="countdown">
-  <div class="row">
-    Countdown
-  </div>
-</section>
-
-<section class="homepage-hero">
-  <div class="row">
-    Time + date
-  </div>
-</section> -->
