Add counter section concept

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -8,3 +8,31 @@ description: Hop into the Grain! op het Craft Beer & Music Festival
     &nbsp;
   </div>
 </section>
+
+<section class="counter">
+  <div class="row">
+
+    <h2>AWESOME BEER & MUSIC IN...</h2>
+
+    <div class="counter-wrapper">
+
+      <div class="counter-block">
+        <span class="day">66</span>
+        <span class="unit">Days</span>
+      </div>
+      <div class="counter-block">
+        <span class="day">13</span>
+        <span class="unit">Hours</span>
+      </div>
+      <div class="counter-block">
+        <span class="day">30</span>
+        <span class="unit">Minutes</span>
+      </div>
+      <div class="counter-block">
+        <span class="day">59</span>
+        <span class="unit">Seconds</span>
+      </div>
+    </div>
+
+  </div>
+</section>
