Add featured line-up section

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -12,7 +12,7 @@ description: Hop into the Grain! op het Craft Beer & Music Festival
 <section class="counter">
   <div class="row">
 
-    <h2>AWESOME BEER & MUSIC IN...</h2>
+    <h2>Countdown</h2>
 
     <div class="counter-wrapper">
 
@@ -32,6 +32,43 @@ description: Hop into the Grain! op het Craft Beer & Music Festival
         <span class="day">59</span>
         <span class="unit">Seconds</span>
       </div>
+    </div>
+
+  </div>
+</section>
+
+<section class="featured-line-up">
+  <div class="row">
+
+    <h2>Line-up</h2>
+
+    <h3>Sample a wide variety of craft beer, all while enjoying listening to live music.</h3>
+
+    <div class="line-up-wrapper">
+      <a class="line-up-block" href="#">
+        <%= image_tag("line-up/het-uiltje.png") %>
+      </a>
+      <a class="line-up-block" href="#">
+        <%= image_tag("line-up/de-moersleutel.png") %>
+      </a>
+      <a class="line-up-block" href="#">
+        <%= image_tag("line-up/jopen.png") %>
+      </a>
+      <a class="line-up-block" href="#">
+        <%= image_tag("line-up/frontaal.png") %>
+      </a>
+      <a class="line-up-block" href="#">
+        <%= image_tag("line-up/het-uiltje.png") %>
+      </a>
+      <a class="line-up-block" href="#">
+        <%= image_tag("line-up/de-moersleutel.png") %>
+      </a>
+      <a class="line-up-block" href="#">
+        <%= image_tag("line-up/jopen.png") %>
+      </a>
+      <a class="line-up-block" href="#">
+        <%= image_tag("line-up/frontaal.png") %>
+      </a>
     </div>
 
   </div>
