--- a/source/stylesheets/base/_variables.scss
+++ b/source/stylesheets/base/_variables.scss
@@ -24,6 +24,7 @@ $light-gray: #ddd;
 $light-blue: #99fdfb;
 $white: #fff;
 $black: #000;
+$deep-purple: #190a45;
 
 // Font Colors
 $base-font-color: $dark-gray;
