--- a/source/_header.html.erb
+++ b/source/_header.html.erb
@@ -11,7 +11,7 @@
       <nav class="main-nav">
         <ul>
           <li>
-            <a class="nav-item" href="#">Line-up</a>
+            <a class="nav-item" href="/line-up/">Line-up</a>
           </li>
           <li>
             <a class="nav-item" href="#">Event Info</a>
