Add basic info page

--- a/source/_header.html.erb
+++ b/source/_header.html.erb
@@ -14,7 +14,7 @@
             <a class="nav-item" href="/line-up/">Line-up</a>
           </li>
           <li>
-            <a class="nav-item" href="#">Event Info</a>
+            <a class="nav-item" href="/info/">Info</a>
           </li>
           <li>
             <a class="nav-item" href="#">Contact</a>
