Add food and improve line up nav

--- a/source/line-up.html.erb
+++ b/source/line-up.html.erb
@@ -13,13 +13,16 @@ title: Line up
     <nav class="line-up-nav-wrapper">
       <ul>
         <li>
-          <a href="#">ALL</a>
+          <a href="#" class="active">ALL</a>
         </li>
         <li>
           <a href="#">BEER</a>
         </li>
         <li>
           <a href="#">MUSIC</a>
+        </li>
+        <li>
+          <a href="#">FOOD</a>
         </li>
       </ul>
     </nav>
