Update info page and hero

--- a/source/info.html.erb
+++ b/source/info.html.erb
@@ -7,3 +7,17 @@ title: Info
     <h1>Info</h1>
   </div>
 </section>
+
+<section class="content">
+  <div class="row">
+    <article>
+      <h2>Festival Highlights</h2>
+      <p>
+        <strong>Bier:</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vel velit leo. Ut enim eros, molestie et dui sit amet, bibendum iaculis mi. Ut nisl magna, scelerisque eleifend ullamcorper ut, elementum vel urna. Donec sollicitudin sollicitudin lectus. Mauris dictum tortor non aliquam eleifend. Nam molestie at felis non hendrerit. In eget scelerisque ipsum, id venenatis lacus. Vivamus vitae sem sit amet lectus fringilla tincidunt. <a href="/line-up">Bier line-up</a>.
+      </p>
+      <p>
+        <strong>Bands:</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vel velit leo. Ut enim eros, molestie et dui sit amet, bibendum iaculis mi. Ut nisl magna, scelerisque eleifend ullamcorper ut, elementum vel urna. Donec sollicitudin sollicitudin lectus. Mauris dictum tortor non aliquam eleifend. Nam molestie at felis non hendrerit. In eget scelerisque ipsum, id venenatis lacus. Vivamus vitae sem sit amet lectus fringilla tincidunt.
+      </p>
+    </article>
+  </div>
+</section>
