Add basic contact

--- a/source/_header.html.erb
+++ b/source/_header.html.erb
@@ -17,7 +17,7 @@
             <a class="nav-item" href="/info/">Info</a>
           </li>
           <li>
-            <a class="nav-item" href="#">Contact</a>
+            <a class="nav-item" href="/contact/">Contact</a>
           </li>
           <li>
             <a class="button orange" href="#">Tickets &raquo;</a>
