Add meta description

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -12,6 +12,7 @@
         <%= current_page.data.title %> | Hop! into the Grain!
       <% end %>
     </title>
+    <meta name="description" content="<%= h(meta_description) %>">
     <%= stylesheet_link_tag "main" %>
     <%= javascript_include_tag "site" %>
   </head>
