Add button to featured line-up

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -71,5 +71,7 @@ description: Hop into the Grain! op het Craft Beer & Music Festival
       </a>
     </div>
 
+    <a href="/line-up/" class="button orange">View full line-up</a>
+
   </div>
 </section>
