--- a/source/_header.html.erb
+++ b/source/_header.html.erb
@@ -8,6 +8,10 @@
         <% end %>
       </div>
 
+      <a href="#" class="nav-trigger">
+        <span aria-hidden="true"></span>
+      </a>
+
       <nav class="main-nav">
         <ul>
           <li>
