--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,11 +3,11 @@ title: Hop into the Grain! - Craft Beer & Music Festival - MAY 26th, 2018 - Gron
 description: Hop into the Grain! op het Craft Beer & Music Festival
 ---
 
-<section class="hero">
+<!-- <section class="hero">
   <div class="hero-inner">
     &nbsp;
   </div>
-</section>
+</section> -->
 
 <section class="counter">
   <div class="row">
@@ -45,18 +45,6 @@ description: Hop into the Grain! op het Craft Beer & Music Festival
     <h3>Sample a wide variety of craft beer, all while enjoying listening to live music.</h3>
 
     <div class="line-up-wrapper">
-      <a class="line-up-block" href="#">
-        <%= image_tag("line-up/het-uiltje.png") %>
-      </a>
-      <a class="line-up-block" href="#">
-        <%= image_tag("line-up/de-moersleutel.png") %>
-      </a>
-      <a class="line-up-block" href="#">
-        <%= image_tag("line-up/jopen.png") %>
-      </a>
-      <a class="line-up-block" href="#">
-        <%= image_tag("line-up/frontaal.png") %>
-      </a>
       <a class="line-up-block" href="#">
         <%= image_tag("line-up/het-uiltje.png") %>
       </a>
