Add active state to nav

--- a/source/_header.html.erb
+++ b/source/_header.html.erb
@@ -15,13 +15,13 @@
       <nav class="main-nav">
         <ul>
           <li>
-            <a class="nav-item" href="/line-up/">Line-up</a>
+            <%= nav_link "Line-up", "/line-up/", class: "nav-item" %>
           </li>
           <li>
-            <a class="nav-item" href="/info/">Info</a>
+            <%= nav_link "Info", "/info/", class: "nav-item" %>
           </li>
           <li>
-            <a class="nav-item" href="/contact/">Contact</a>
+            <%= nav_link "Contact", "/contact/", class: "nav-item" %>
           </li>
           <li>
             <a class="button orange" href="#">Tickets &raquo;</a>
