--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -7,9 +7,9 @@
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>
       <% if current_page == "index.html" %>
-        Hop into the Grain! - Craft Beer & Music Festival - MAY 26th, 2018 - Groningen
+        Hop! into the Grain! - Craft Beer & Music Festival - MAY 26th, 2018 - Groningen
       <% else %>
-        <%= current_page.data.title %> | Hop! into the Grain!
+        <%= current_page.data.title %> | Hop! into the Grain! 2018
       <% end %>
     </title>
     <meta name="description" content="<%= h(meta_description) %>">
