--- a/source/stylesheets/_header.scss
+++ b/source/stylesheets/_header.scss
@@ -90,7 +90,9 @@
       text-decoration: none;
       text-transform: uppercase;
 
-      &:hover {
+      &.active,
+      &:active,
+      &:hover, {
         color: $orange;
       }
     }
