--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -17,20 +17,36 @@ description: Hop into the Grain! op het Craft Beer & Music Festival
     <div class="counter-wrapper">
 
       <div class="counter-block">
-        <span class="day">66</span>
-        <span class="unit">Days</span>
+        <span class="day">
+          66
+        </span>
+        <span class="unit">
+          Days
+        </span>
       </div>
       <div class="counter-block">
-        <span class="day">13</span>
-        <span class="unit">Hours</span>
+        <span class="day">
+          13
+        </span>
+        <span class="unit">
+          Hours
+        </span>
       </div>
       <div class="counter-block">
-        <span class="day">30</span>
-        <span class="unit">Minutes</span>
+        <span class="day">
+          30
+        </span>
+        <span class="unit">
+          Minutes
+        </span>
       </div>
       <div class="counter-block">
-        <span class="day">59</span>
-        <span class="unit">Seconds</span>
+        <span class="day">
+          59
+        </span>
+        <span class="unit">
+          Seconds
+        </span>
       </div>
     </div>
 
@@ -40,9 +56,13 @@ description: Hop into the Grain! op het Craft Beer & Music Festival
 <section class="featured-line-up">
   <div class="row">
 
-    <h2>Line-up</h2>
+    <h2>
+      Line-up
+    </h2>
 
-    <h3>Sample a wide variety of craft beer, all while enjoying listening to live music.</h3>
+    <p>
+      Sample a wide variety of craft beer, all while enjoying listening to live music.
+    </p>
 
     <div class="line-up-wrapper">
       <a class="line-up-block" href="#">
