--- a/source/stylesheets/base/_variables.scss
+++ b/source/stylesheets/base/_variables.scss
@@ -1,6 +1,6 @@
 // Typography
-$base-font-family: $font-stack-system;
-$heading-font-family: $base-font-family;
+$base-font-family: 'Roboto', sans-serif;
+$heading-font-family: 'Oswald', sans-serif;
 
 // Line height
 $base-line-height: 1.5;
