--- a/source/stylesheets/base/_typography.scss
+++ b/source/stylesheets/base/_typography.scss
@@ -15,6 +15,17 @@ h6 {
   font-size: modular-scale(1);
   line-height: $heading-line-height;
   margin: 0 0 $small-spacing;
+  text-transform: uppercase;
+}
+
+h1 {
+  font-size: $base-font-size * 4;
+  margin: 0;
+}
+
+h2 {
+  color: $deep-purple;
+  font-size: $base-font-size * 3;
 }
 
 p {
