--- a/source/info.html.erb
+++ b/source/info.html.erb
@@ -1,6 +1,6 @@
 ---
-title: Info
-description: Waar is het festival? Hoe laat begint het? 
+title: Informatie
+description: Waar is het festival? Hoe laat begint het?
 ---
 
 <section class="hero">
@@ -12,12 +12,76 @@ description: Waar is het festival? Hoe laat begint het?
 <section class="content">
   <div class="row">
     <article>
-      <h2>Festival Highlights</h2>
+      <h2>
+        Praktisch
+      </h2>
+      <h3>
+        Waar is het Festival?
+      </h3>
       <p>
-        <strong>Bier:</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vel velit leo. Ut enim eros, molestie et dui sit amet, bibendum iaculis mi. Ut nisl magna, scelerisque eleifend ullamcorper ut, elementum vel urna. Donec sollicitudin sollicitudin lectus. Mauris dictum tortor non aliquam eleifend. Nam molestie at felis non hendrerit. In eget scelerisque ipsum, id venenatis lacus. Vivamus vitae sem sit amet lectus fringilla tincidunt. <a href="/line-up">Bier line-up</a>.
+        Het Festival vindt plaats op het M2 terrein in Groningen. We adviseren iedereen om met openbaar vervoer te komen. <a href="#">Routebeschrijving</a>
       </p>
+      <h3>
+        Hoe laat is het Festival?
+      </h3>
       <p>
-        <strong>Bands:</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vel velit leo. Ut enim eros, molestie et dui sit amet, bibendum iaculis mi. Ut nisl magna, scelerisque eleifend ullamcorper ut, elementum vel urna. Donec sollicitudin sollicitudin lectus. Mauris dictum tortor non aliquam eleifend. Nam molestie at felis non hendrerit. In eget scelerisque ipsum, id venenatis lacus. Vivamus vitae sem sit amet lectus fringilla tincidunt.
+        Het Festival duurt van 12:00 uur tot 02:00 uur. Taps sluiten om 01:45 uur.
+      </p>
+      <h3>
+        Minimumleeftijd
+      </h3>
+      <p>
+        Belangrijk: onder 18 jaar: geen alcolhol. Breng je ID mee.
+      </p>
+      <h3>
+        Wat kost een muntje?
+      </h3>
+      <p>
+        [geen idee]
+      </p>
+      <h3>
+        Kun je pinnen?
+      </h3>
+      <p>
+        [geen idee]
+      </p>
+      <h3>
+        Wat krijg je voor een ticket?
+      </h3>
+      <p>
+        Bij een ticket krijg je een 20 cl proefglas.
+      </p>
+
+      <h2>
+        Bier
+      </h2>
+      <h3>
+        Welke bieren worden geschonken?
+      </h3>
+      <p>
+        [geen idee]
+      </p>
+      <h3>
+        Wat is het formaat van een taster?
+      </h3>
+      <p>
+        [geen idee]
+      </p>
+      <h3>
+        Eigen bier en eten meenemen
+      </h3>
+      <p>
+        Uiteraard delen we zelf ook graag een bijzonder bier met onze beer geek vrienden, dus we gaan geen regels bedenken. We vragen je wel een beetje respect voor de organisatie van Hop! into the Grain! Festival. We vinden het daarom ongepast om grote hoeveelheden meegebrachte flessen bier te drinken, maar een fles hier en daar moet kunnen... Dank voor je begrip 🙂
+      </p>
+
+      <h2>
+        Muziek
+      </h2>
+      <h3>
+        Welke bands treden op?
+      </h3>
+      <p>
+        [geen idee]
       </p>
     </article>
   </div>
