Fix counter (mobile) styling

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -17,43 +17,55 @@ description: Hop into the Grain! op het Craft Beer & Music Festival
     <div class="counter-wrapper">
 
       <div class="counter-block">
-        <span class="day">
-          66
-        </span>
-        <span class="unit">
-          Days
-        </span>
+        <div class="counter-item">
+          <span class="day">
+            94
+          </span>
+          <span class="unit">
+            Days
+          </span>
+        </div>
       </div>
+
       <div class="counter-block">
-        <span class="day">
-          13
-        </span>
-        <span class="unit">
-          Hours
-        </span>
+        <div class="counter-item">
+          <span class="day">
+            23
+          </span>
+          <span class="unit">
+            Hours
+          </span>
+        </div>
       </div>
+
       <div class="counter-block">
-        <span class="day">
-          30
-        </span>
-        <span class="unit">
-          Minutes
-        </span>
+        <div class="counter-item">
+          <span class="day">
+            49
+          </span>
+          <span class="unit">
+            Minutes
+          </span>
+        </div>
       </div>
+
       <div class="counter-block">
-        <span class="day">
-          59
-        </span>
-        <span class="unit">
-          Seconds
-        </span>
+        <div class="counter-item">
+          <span class="day">
+            6
+          </span>
+          <span class="unit">
+            Seconds
+          </span>
+        </div>
       </div>
+
     </div>
 
   </div>
 </section>
 
-<section class="featured-line-up">
+<!-- <section class="featured-line-up">
   <div class="row">
 
     <h2>
@@ -82,4 +94,4 @@ description: Hop into the Grain! op het Craft Beer & Music Festival
     <a href="/line-up/" class="button orange">View full line-up</a>
 
   </div>
-</section>
+</section> -->
