Fix featured line-up partial

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -65,7 +65,7 @@ description: Hop into the Grain! op het Craft Beer & Music Festival
   </div>
 </section>
 
-<!-- <section class="featured-line-up">
+<section class="featured-line-up">
   <div class="row">
 
     <h2>
@@ -77,21 +77,21 @@ description: Hop into the Grain! op het Craft Beer & Music Festival
     </p>
 
     <div class="line-up-wrapper">
-      <a class="line-up-block" href="#">
+      <div class="line-up-block" href="#">
         <%= image_tag("line-up/het-uiltje.png") %>
-      </a>
-      <a class="line-up-block" href="#">
+      </div>
+      <div class="line-up-block" href="#">
         <%= image_tag("line-up/de-moersleutel.png") %>
-      </a>
-      <a class="line-up-block" href="#">
+      </div>
+      <div class="line-up-block" href="#">
         <%= image_tag("line-up/jopen.png") %>
-      </a>
-      <a class="line-up-block" href="#">
+      </div>
+      <div class="line-up-block" href="#">
         <%= image_tag("line-up/frontaal.png") %>
-      </a>
+      </div>
     </div>
 
-    <a href="/line-up/" class="button orange">View full line-up</a>
+    <a href="/line-up/" class="button big orange">View full line-up</a>
 
   </div>
-</section> -->
+</section>
