--- a/source/info.html.erb
+++ b/source/info.html.erb
@@ -31,7 +31,7 @@ description: Waar is het festival? Hoe laat begint het?
         Minimumleeftijd
       </h3>
       <p>
-        Belangrijk: onder 18 jaar: geen alcolhol. Breng je ID mee.
+        Belangrijk: onder 18 jaar: geen alcohol. Breng je id mee.
       </p>
       <h3>
         Wat kost een muntje?
