--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -14,51 +14,9 @@ description: Hop into the Grain! op het Craft Beer & Music Festival
 
     <h2>Countdown</h2>
 
-    <div class="counter-wrapper">
+    <div class="counter-wrapper" id="timer">
 
-      <div class="counter-block">
-        <div class="counter-item">
-          <span class="day">
-            94
-          </span>
-          <span class="unit">
-            Days
-          </span>
-        </div>
-      </div>
 
-      <div class="counter-block">
-        <div class="counter-item">
-          <span class="day">
-            23
-          </span>
-          <span class="unit">
-            Hours
-          </span>
-        </div>
-      </div>
-
-      <div class="counter-block">
-        <div class="counter-item">
-          <span class="day">
-            49
-          </span>
-          <span class="unit">
-            Minutes
-          </span>
-        </div>
-      </div>
-
-      <div class="counter-block">
-        <div class="counter-item">
-          <span class="day">
-            6
-          </span>
-          <span class="unit">
-            Seconds
-          </span>
-        </div>
-      </div>
 
     </div>
 
