--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,11 +3,20 @@ title: Hop into the Grain! - Craft Beer & Music Festival - MAY 26th, 2018 - Gron
 description: Hop into the Grain! op het Craft Beer & Music Festival
 ---
 
-<!-- <section class="hero">
-  <div class="hero-inner">
-    &nbsp;
+<section class="hero">
+  <div class="row">
+    <%= image_tag("logo-hop-into-the-grain-vert.png") %>
+    <h1>
+      Beer & Music Festival
+    </h1>
+    <h2>
+      <span>May 26, 2018</span>
+      <span>EM2 "the barn"</span>
+      <span>Groningen</span>
+    </h2>
+    <a class="button big orange">Tickets &raquo;</a>
   </div>
-</section> -->
+</section>
 
 <section class="counter">
   <div class="row">
@@ -15,8 +24,6 @@ description: Hop into the Grain! op het Craft Beer & Music Festival
     <h2>Countdown</h2>
 
     <div class="counter-wrapper" id="timer">
-
-
 
     </div>
 
