--- a/source/stylesheets/base/_buttons.scss
+++ b/source/stylesheets/base/_buttons.scss
@@ -48,7 +48,9 @@ $_button-background-color-hover: shade($action-color, 20%);
   }
 
   &.big {
+    font-family: $heading-font-family;
     font-size: 1.3em;
+    text-transform: uppercase;
   }
 
   &.blue {
